--- a/templates/accounts/forgot_password.html
+++ b/templates/accounts/forgot_password.html
@@ -1,46 +1,49 @@
-  {% extends 'user_dashboard_base.html' %}
+{% extends 'base.html' %}
 
 
 {% block content %}
 
-{% comment %} <section class="section-conten padding-y bg"> {% endcomment %}
-<main class="col-md-9">
-	
-        <!-- Content for the main section goes here -->
-        <!-- You can add your content here -->
-		{% comment %} {% include 'includes/alerts.html' %} {% endcomment %}
-		<div class="container">
-		  <div class="row">
-			  <main class="col-md-9">
-			    <article class="card">
-                <div class="card-body">
-						            <strong class="card-title" >Forgot Password</strong>
-							                <div style="margin-top: 10px; ">
-                                <div class="card-body">
-                                    {% comment %} <h4 class="card-title mb-4">Change Password</h4> {% endcomment %}
-                                    {% include 'includes/alerts.html' %}
-                                    <form action="{% url 'forgot_password' %}" method="POST">
-                                      {% csrf_token %}
-                                      <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Enter Your Email Address" name="email" required>
-                                     </div> 
-                                        <div class="form-group float-right">
-                                            <button type="submit" class="btn btn-primary btn-md" style="max-width:200px;"> Submit  </button>
-                                        </div> <!-- form-group// -->
-                                    </form>
-                                    </div> <!-- card-body.// -->
-                                </div>
-							                </div>
-                </div> <!-- card-body .// -->
-			    </article> <!-- order-group.// -->
-			  </main>
-		  </div> <!-- row.// -->
-		</div>
-{% comment %} </section> {% endcomment %}
-</main>
-</div> <!-- row.// -->
-</div> <!-- container.// -->
-</body>
-</html>
+{% comment %} <section class="section-conten padding-y bg" style="min-height:84vh"> {% endcomment %}
+
+
+<section class="section-conten padding-y" style="min-height:84vh">
+
+  <!-- ============================ COMPONENT LOGIN   ================================= -->
+  
+  
+    <div class="card mx-auto" style="max-width: 496px; margin-top:100px;">
+  
+        <div class="card-body ">
+        <h4 class="card-title mb-4">FORGOT PASSWORD</h4>
+        <br>
+        {% include 'includes/alerts.html' %}
+        <small>Please enter your email address for recover your password.</small>
+      
+        <form action="{% url 'forgot_password' %}" method="POST">
+         {% csrf_token %}
+         <div class="form-group">
+             <input type="email" class="form-control" placeholder="Enter Your Email Address" name="email" required>
+         </div> 
+         <div class="form-group float-right" >
+          <button type="submit" class="btn btn-primary btn-md" style="max-width: 200px;">Submit</button>
+      </div>
+      </form>
+      <div class="form-group" style="margin-left: 7px;">
+          <a href="{% url 'user_profile_info' %}">cancel</a>
+      </div>
+      
+        </div> <!-- card-body.// -->
+      </div> <!-- card .// -->
+  
+       {% comment %} <p class="text-center mt-4"><a href="{% url 'forgot_password' %}">Login</a></p> {% endcomment %}
+       <br><br>
+  <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
+  
+  </section>
+
 
 {% endblock %}
+
+
+
+
