--- a/templates/accounts/signup_otp.html
+++ b/templates/accounts/signup_otp.html
@@ -8,23 +8,18 @@
 <!-- ============================ COMPONENT LOGIN   ================================= -->
 
 
-
 	<div class="card mx-auto" style="max-width: 496px; margin-top:100px;">
 
       <div class="card-body ">
-      <h4 class="card-title mb-4">CONFIRM EMAIL FOR SIGN UP</h4>
+      <h4 class="card-title mb-4">EMAIL VERIFICATION</h4>
       <br>
       {% include 'includes/alerts.html' %}
-      <small>Enter OTP in your email address for confirm email address.</small>
+      <small>Enter the OTP received in your email address for confirm email address for sign up.</small>
       <form action="{% url 'signup_otp' %}" method="POST">
         {% csrf_token %}
           <div class="form-group">
 			 <input type="text" class="form-control" placeholder="Enter OTP" name="u_otp" required>
           </div> <!-- form-group// -->
-          
-          {% comment %} <div class="form-group">
-          	<a href="{% url 'user_login' %}" class="float-right">Got password? Login</a>
-          </div> <!-- form-group form-check .// --> {% endcomment %}
 
           <div class="form-group">
               <button type="submit" class="btn btn-primary btn-block"> Submit  </button>
